added a little CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label>Character Name:
         <input type="text" placeholder="Peach, Bowser ... ect.">
         </label>
-        <input type="submit" value="Mario time!" />
+        <input class="submit" type="submit" value="Mario time!" />
     </form>
 
     <main>
