--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    <div>Mario Kart Tour</div>
     <div></div>
     <div></div>
-    <div><img src="https://i.imgur.com/BFeXcxos.png"/></div>
+    <div><img src='https://i.postimg.cc/18XrgFnW/257-2575185-goomba-student-mario-bros-brown-character.jpg' border='0' alt='goomba'/></div>
   </nav>
   <aside class="centered"></aside>
   <main class="centered">
